--- a/index.html
+++ b/index.html
@@ -4,27 +4,21 @@
 	<title>My Website </title>
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="index.css">
+	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
-hello 
 
 <body>
 
-
-<div class="nav">
-	<ul>
-	<li>
+<div class="box">
+	<div class="nav" id="link1">
  			<a href="index.htmL"> Home </a>
- 	</li>
-
- 	<li>
+ 	</div>
+ 	<div class= "nav" id ="link2">
  		<a href="portfolio.html"> Portfolio </a>
-	</li>
- 
- 	<li>
-  	<a href= "contact.html"> Contact </a>
-	</li>
-</ul>
+	</div>
+	<div class = "nav" id="link3">
+  		<a href= "contact.html"> Contact </a>
+	</div>
 </div>
 
 <div class= "header">
@@ -42,15 +36,6 @@ hello
 	<p>	In her free time, she enjoys reading novels and long-form journalism, taking photos, playing board games, and mixing up (and drinking!) craft cocktails. </p>
 </div>
 
-</div>
-
-<div class="wrapper">
-
-
-<div class="text">
-
-
-</div>
 
 
 </body>
