--- a/contact.html
+++ b/contact.html
@@ -9,21 +9,17 @@
 
 <body>
 
-	<ul>
-	<div class="nav">
-	<li>
+<div class="box">
+	<div class="nav" id="link1">
  			<a href="index.htmL"> Home </a>
- 	</li>
-
- 	<li>
+ 	</div>
+ 	<div class= "nav" id ="link2">
  		<a href="portfolio.html"> Portfolio </a>
-	</li>
- 
- 	<li>
-  	<a href= "contact.html"> Contact </a>
-	</li>
 	</div>
-</ul>
+	<div class = "nav" id="link3">
+  		<a href= "contact.html"> Contact </a>
+	</div>
+</div>
 
 <div class= "header">
 	<header>
