--- a/portfolio.html
+++ b/portfolio.html
@@ -9,21 +9,19 @@
 
 <body>
 
-	<ul>
-	<div class="nav">
-	<li>
- 			<a href="index.htmL"> Home </a>
- 	</li>
+	<div class="box">
+		<div class="nav" id="link1"> 
+			<a href="index.htmL"> Home </a>
+ 		</div>
+ 		<div class= "nav" id ="link2">
+ 			<a href="portfolio.html"> Portfolio </a>
+		</div>
+		<div class = "nav" id="link3">
+  			<a href= "contact.html"> Contact </a>
+		</div>
+</div>
+	
 
- 	<li>
- 		<a href="portfolio.html"> Portfolio </a>
-	</li>
- 
- 	<li>
-  	<a href= "contact.html"> Contact </a>
-	</li>
-	</div>
-</ul>
 
 <div class= "header">
 	<header>
