--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="contact.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Contact</title>
 
 </head>
@@ -33,12 +34,15 @@
 </div>
 
 <div class = "list">
-	<ul>
-	<li><strong>Email:</strong> JordynK91@gmail.com</li>
-	<li><strong>Phone:</strong> 215-962-8933</li>
-	<li> <strong>Slack:</strong> @Jordyn Kimelheim </li>
-	</ul>
+	<p><strong>Email:</strong> JordynK91@gmail.com</p>
+	<p><strong>Phone:</strong> 215-962-8933</p>
+	<p> <strong>Slack:</strong> @Jordyn Kimelheim </p>
 </div>
+
+<div class="footer">
+	<div class="endtext"> A Jordyn Kimelheim Jawn </div>
+</div>
+
 
 </body>
 </html>
