--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="portfolio.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Portfolio</title>
 
 </head>
@@ -19,21 +20,22 @@
 		<div class = "nav" id="link3">
   			<a href= "contact.html"> Contact </a>
 		</div>
-</div>
+	</div>
 	
-
-
-<div class= "header">
-	<header>
+	<div class= "header">
+		<header>
 		<h1> {Portfolio}</h1>
-	</header>
+		</header>
+	</div>
 
+	<div class = "text">
+		<h3> Loading...</h3>
+	</div>
+
+<div class="footer">
+	<div class="endtext"> A Jordyn Kimelheim Jawn 
+	</div>
 </div>
-
-<div class = "text">
-	<p> TBD!</p>
-</div>
-
 
 </body>
 </html>
